@startuml
skinparam backgroundColor #ffffff
skinparam classAttributeIconSize 0
hide circle

abstract class Command {
CommandResult execute()
}
abstract class ViewCommand
class ViewAllStudentsCommand
class ViewOneStudentCommand
interface Model
class Name

Command <|-- ViewCommand

ViewCommand <|-- ViewAllStudentsCommand
ViewCommand <|-- ViewOneStudentCommand

ViewAllStudentsCommand ..> Model
ViewOneStudentCommand ..> Model
ViewOneStudentCommand ..> Name

@enduml
